// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component Snapshot Tests matches snapshot for authenticated state 1`] = `
<DocumentFragment>
  <header
    class="sticky top-0 z-40 w-full glass-nav "
  >
    <div
      class="mx-auto w-full px-4 sm:px-6 lg:px-8 max-w-7xl py-4"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex h-10 w-10 items-center justify-center rounded-xl bg-brand-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield h-5 w-5 text-brand-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
          </div>
          <div>
            <button
              class="text-left text-lg font-semibold text-foreground"
              type="button"
            >
              LinkGuard
            </button>
            <p
              class="text-xs text-muted-foreground"
            >
              Security analysis dashboard
            </p>
          </div>
        </div>
        <div
          class="sm:hidden"
        >
          <div
            data-testid="mobile-nav"
          >
            <span>
              authenticated
            </span>
            <span>
              John Doe
            </span>
          </div>
        </div>
        <div
          class="hidden sm:flex items-center gap-4"
        >
          <div
            data-testid="card-nav"
          >
            <div>
              Platform
            </div>
            <div>
              Public Tools
            </div>
            <div>
              Resources
            </div>
          </div>
          <div
            data-testid="theme-toggle"
          />
          <div
            class="flex items-center gap-3"
          >
            <div
              class="flex items-center gap-2 rounded-full border border-white/10 px-3 py-1.5 text-xs text-muted-foreground"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                John Doe
              </span>
            </div>
            <button
              class="inline-flex min-h-[44px] min-w-[44px] items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-9 rounded-md px-3"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader Component Snapshot Tests matches snapshot for unauthenticated state 1`] = `
<DocumentFragment>
  <header
    class="sticky top-0 z-40 w-full glass-nav "
  >
    <div
      class="mx-auto w-full px-4 sm:px-6 lg:px-8 max-w-7xl py-4"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex h-10 w-10 items-center justify-center rounded-xl bg-brand-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield h-5 w-5 text-brand-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
          </div>
          <div>
            <button
              class="text-left text-lg font-semibold text-foreground"
              type="button"
            >
              LinkGuard
            </button>
            <p
              class="text-xs text-muted-foreground"
            >
              Security analysis dashboard
            </p>
          </div>
        </div>
        <div
          class="sm:hidden"
        >
          <div
            data-testid="mobile-nav"
          >
            <span>
              not-authenticated
            </span>
          </div>
        </div>
        <div
          class="hidden sm:flex items-center gap-4"
        >
          <div
            data-testid="card-nav"
          >
            <div>
              Platform
            </div>
            <div>
              Public Tools
            </div>
            <div>
              Resources
            </div>
          </div>
          <div
            data-testid="theme-toggle"
          />
          <button
            class="inline-flex min-h-[44px] min-w-[44px] items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 rounded-md px-3"
          >
            Log In
          </button>
          <button
            class="inline-flex min-h-[44px] min-w-[44px] items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
          >
            Sign Up
          </button>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader Component Snapshot Tests matches snapshot with custom actions 1`] = `
<DocumentFragment>
  <header
    class="sticky top-0 z-40 w-full glass-nav "
  >
    <div
      class="mx-auto w-full px-4 sm:px-6 lg:px-8 max-w-7xl py-4"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex h-10 w-10 items-center justify-center rounded-xl bg-brand-500/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield h-5 w-5 text-brand-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
          </div>
          <div>
            <button
              class="text-left text-lg font-semibold text-foreground"
              type="button"
            >
              LinkGuard
            </button>
            <p
              class="text-xs text-muted-foreground"
            >
              Security analysis dashboard
            </p>
          </div>
        </div>
        <div
          class="sm:hidden"
        >
          <div
            data-testid="mobile-nav"
          >
            <span>
              not-authenticated
            </span>
          </div>
        </div>
        <div
          class="hidden sm:flex items-center gap-4"
        >
          <div
            data-testid="card-nav"
          >
            <div>
              Platform
            </div>
            <div>
              Public Tools
            </div>
            <div>
              Resources
            </div>
          </div>
          <div
            data-testid="theme-toggle"
          />
          <div
            class="flex items-center gap-3"
          >
            <button>
              Custom
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
